# rust-exercises

./: rust.code-workspace
idiomatic_rust/pres/: Cargo.toml
idiomatic_rust/pres/src/assets/: config.json  config.yml  invalid_bsns.in  valid_bsns.in
idiomatic_rust/slides/: index.md  package.json  pnpm-lock.yaml
rust_for_web/c07-gardener-test/: Cargo.toml  docker-compose.yaml
rust_for_web/c07-gardener-test/crates/service/src/: garden.rs  plant.rs
rust_for_web/c07-gardener-test/src/: main.rs
rust_for_web/slides/: index.md
unsafe_rust/c04-linked-list/src/: main.rs
