[package]
name = "c07-gardener-test"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
config = { path = "crates/config" }
model = { path = "crates/model" }
routes = { path = "crates/routes" }
service = { path = "crates/service" }

axum = { version = "0.8.3", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
async-trait = "0.1.88"
figment = { version = "0.10.19", features = ["toml", "env"] }
mongodb = "3.2.3"
axum-server = "0.7.2"
eyre = "0.6.12"
color-eyre = "0.6.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
axum-extra = "0.10.1"
futures = "0.3.31"
thiserror = "2.0.12"
uuid = { version = "1.16.0", features = ["serde"] }
tower = "0.5.2"

[dependencies]
service.workspace = true
routes.workspace = true
model.workspace = true
mongodb.workspace = true
config.workspace = true

tokio.workspace = true
tower.workspace = true
axum-server.workspace = true
eyre.workspace = true
color-eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { workspace = true, features = ["serde"] }
tower-http = { version = "0.6.2", features = ["cors"] }
http = "1.3.1"
